--- a/app/src/main/res/layout/layout_additional_action.xml
+++ b/app/src/main/res/layout/layout_additional_action.xml
@@ -53,7 +53,7 @@
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_25sdp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_remove_image"
+                    android:src="@drawable/ic_add_record"
                     app:tint="@color/colorIcons"/>
 
             </FrameLayout>
